--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 	                      0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 body{
-	background: url(http://amfblog.s3.amazonaws.com/wp-content/uploads/2015/07/Santorini-Greece-91.jpg );
+	background: url(https://wallpapercave.com/wp/sJ4VMGa.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
