Add color to heart icon

--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ color: #2d2d2d;
 .fa-user{
 color: #2d2d2d;
 }
+.fa-heart{
+color: crimson;
+}
  .btn-danger  {
     background-color:dodgerblue !important;
     border: none !important;
