--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 	                      0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 body{
-	background: url(https://wallpapercave.com/wp/sJ4VMGa.jpg);
+/* 	background: url(https://wallpapercave.com/wp/sJ4VMGa.jpg);
 	background-size: cover;
-	background-repeat: no-repeat;
+	background-repeat: no-repeat; */
 }
 *{
 	font-family:Mina;
@@ -47,6 +47,12 @@ color: crimson;
  .btn-danger:hover{
 	background:  rgb(0, 119, 255)!important;
 	color: 
+}
+.container
+{
+ background: url(https://wallpapercave.com/wp/sJ4VMGa.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 
