--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	font-family:Mina;
     font-weight: 600;
 }
-body,html{
+html{
 	height: 100%;
 }
  .btn-primary  {
@@ -43,7 +43,7 @@ color: crimson;
 	background:  rgb(0, 119, 255)!important;
 	color: 
 }
-.bg
+body
 {
 	  /* The image used */
   background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
