--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ color: #28b485;
 color:#7ed56f;
 }
 .fa-user-plus{
-color: #2d2d2d;
+color: white;
 }
 .fa-user{
-color: #2d2d2d;
+color: white;
 }
 .fa-heart{
 color: crimson;
