--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 	                      0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 *{
-	font-family:Mina;
-    font-weight: 600;
+font-family: 'Lilita One', cursive;
 }
 html{
 	height: 100%;
