--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ color: crimson;
 body
 {
 	  /* The image used */
-  background-image: url("https://wallpapercave.com/wp/sJ4VMGa.jpg");
+  background-image: url("image.jpg");
 
   /* Full height */
   height: 100%;
