--- a/style.css
+++ b/style.css
@@ -45,15 +45,18 @@ color: crimson;
 body
 {
 	  /* The image used */
-  background-image: url("image.jpg");
+/*   background-image: url("image.jpg"); */
 
   /* Full height */
-  height: 100%;
+/*   height: 100%; */
 
   /* Center and scale the image nicely */
-  background-position: center;
+/*   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
+	background: #0cebeb;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 
