--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ color: crimson;
 }
 .fa-smile-wink,.fa-laugh-wink{
     font-size: 25px;
+    color:#ffeb3b;
 }
 .fa-quote-right,.fa-quote-left{
     font-size: 25px;
