--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ h1{
 }
 body
 {
-background: #0cebeb;  
-background: -webkit-linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);  
-background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb); 
+background: #f2709c;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ff9472, #f2709c);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ff9472, #f2709c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 #content{
@@ -34,10 +34,11 @@ background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);
 }
 
 .fa-meetup{
-color: #28b485;
+color:#ff9472;
+transition:0.5s;
 }
 .fa-meetup:hover{
-color:#7ed56f;
+color:#f2709c;
 }
 .fa-user-plus{
 color: whitesmoke;
