change emoji color

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ color: crimson;
 }
 .fa-smile-wink,.fa-laugh-wink{
     font-size: 25px;
-    color:#ff6f00;
+    color:#f2709c;
 }
 .fa-quote-right,.fa-quote-left{
     font-size: 25px;
