--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ background: linear-gradient(to right, #ff9472, #f2709c); /* W3C, IE 10+/ Edge, F
 }
 #container
 {
-    background-color: rgb(250,250,240);
+    background-color:whitesmoke;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
     padding: 12px;
     
