--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-font-family: 'Lilita One', cursive;
+font-family: 'Lalezar', cursive;
 }
 html{
 	height: 100%;
@@ -60,6 +60,7 @@ color: crimson;
     border-radius: 2px !important;
      transition: 0.3s !important;
      margin-top: 20px !important;
+    box-shadow: 0 0 3px rgba(0,0,0,0.3) !important;
 }
  .btn-danger:hover{
 	background:  rgb(0, 119, 255)!important;
@@ -74,6 +75,7 @@ color: crimson;
      margin-top: 20px !important;
      margin-left: 6px;
      margin-right: 6px;
+     box-shadow: 0 0 3px rgba(0,0,0,0.3) !important;
 }
  .btn-info:hover{
 	background:  rgb(0, 119, 255)!important;
