Increase brand size

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ color: crimson;
 }
 .navbar-brand{
     color: whitesmoke !important;
+    font-size:25px !important;
 }
 .col-centered{
     float: none !important;
