--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body
 }
 #container
 {
+    margin-top:0px !important;
     background-color: whitesmoke;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
     padding: 12px;
