Added background image

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body
 /*background: #f2709c;   fallback for old browsers */
 /*background: -webkit-linear-gradient(to right, #ff9472, #f2709c);   Chrome 10-25, Safari 5.1-6 */
 /*background: linear-gradient(to right, #f2709c, #ff9472);  W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-   background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+   background-image: url('BG.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
