--- a/style.css
+++ b/style.css
@@ -1,13 +1,6 @@
 body
 {
-/*background: #f2709c;   fallback for old browsers */
-/*background: -webkit-linear-gradient(to right, #ff9472, #f2709c);   Chrome 10-25, Safari 5.1-6 */
-/*background: linear-gradient(to right, #f2709c, #ff9472);  W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- /*  background-image: url('BG.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;*/
-background-color: whitesmoke;
+background-color:rgb(250,250,250);
 }
 #brand{
 	font-family: chewy;
@@ -32,6 +25,13 @@ background-color: whitesmoke;
   color: dimgray;
 }
 #box{
+   border: 0px solid white;
+   border-radius: 0px;
+   margin-bottom: 20px !important;
+   padding: 10px;
+   background-color: rgb(250,250,250);
+}
+#box2{
    border: 0px solid white;
    border-radius: 0px;
    margin-bottom: 20px !important;
@@ -61,14 +61,14 @@ color:#FF5F6D;
      transition: 0.3s !important;
      margin-top: 20px !important;
      border-radius: 0px !important;
-box-shadow: 0 0 3px rgba(0,0,0,0.4) !important;
+	 box-shadow: 0 0 3px rgba(0,0,0,0.2) !important;
      outline: none !important;
 }
 .btn-success:hover{
     background:#0072ff !important;
 /*    #0072ff*/
 	color: ghostwhite !important;
-	box-shadow: 0 0 3px rgba(0,0,0,0.4) !important;
+	box-shadow: 0 0 3px rgba(0,0,0,0.3) !important;
 }
 .col-centered{
     float: none;
@@ -76,7 +76,7 @@ box-shadow: 0 0 3px rgba(0,0,0,0.4) !important;
 }
 .oswald{
 	font-family: oswald;
-	font-size: 25px;
+	font-size: 23px;
 }
 h4 a{
 	transition: 0.5s;
@@ -98,7 +98,7 @@ h2,h3,h5{
 	font-weight: bold;
 }
 ul,p{
-	font-size: 16px;
+	font-size: 18px;
 	font-family:"literata";
     color: #2d2d2d;
 /*	font-family: literata;*/
@@ -111,7 +111,7 @@ img,a{
 	user-select: none;
 }
 p a{
-	color:#0072ff;
+	color:#00c6ff;
 /*    #FF5F6D #76b852 #8DC26F*/
 	text-decoration: underline !important;
 	transition: 0.6s !important;
@@ -119,31 +119,9 @@ p a{
 p a:hover{
 color:#0072ff;
 }
-/*
-.gotopbtn{
-  position: fixed;
-  width: 40px;
-  height: 40px;
-  background: #00c6ff;
-  bottom: 30px;
-  right: 40px;
-  display: none;
-  text-decoration: none;
-  text-align: center;
-  line-height: 40px;
-  color: whitesmoke;
-  font-size: 22px;
-  opacity: 0.6;
-  margin-right: 0px;
-}
-.gotopbtn:hover{
-	color: whitesmoke;
-}
-*/
+
 ::selection{
 	 color: #2d2d2d;
     background-color:#00c6ff;
 }
-
-
 
