--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-background-color:rgb(200,200,200);
+background-color:rgb(230,230,230);
 }
 #brand{
 	font-family: chewy;
@@ -37,6 +37,7 @@ background-color:rgb(200,200,200);
    margin-bottom: 20px !important;
    padding: 9px;
    background-color: rgb(250,250,250);
+   box-shadow: 0 0 3px rgba(0,0,0,0.1)
 }
 .navbar-expand-md{
    box-shadow: 0 0 7px rgba(0,0,0,0.1);	
