--- a/style.css
+++ b/style.css
@@ -1,29 +1,7 @@
 body
 {
  background-color: whitesmoke;
-}
-
-#brand{
-	font-family: chewy;
-	font-size: 30px;
-    font-weight: bold;
-    color:#FD746C;
-    letter-spacing: 3px;
-    user-select: none;
-}
-#brand:hover{
-	color: #FF5F6D;
-}
-#links{
-	font-size:28px;
-	letter-spacing: 2px;
-	font-weight: bold;
-	color: #2d2d2d;
-	transition: 0.5s;
-	user-select: none;
-}
-#links:hover{
-  color: dimgray;
+/*     background:linear-gradient(to right, rgb(5, 250, 225), rgb(29, 53, 226));*/
 }
 #box{
    border: 0px solid white;
@@ -42,53 +20,43 @@ body
 .navbar-expand-md{
    box-shadow: 0 0 7px rgba(0,0,0,0.1);	
 }
-.navbar-toggler{
-border-radius: 0px;
-outline:none !important;
-}
-.fa-meteor{
-font-size: 45px;
-color: #FD746C;
-transition: 0.5s;
-}
-.fa-meteor:hover{
-color:#FF5F6D;
-}
 .btn-success{
 	font-family: Oswald;
 	 background-color:#ff5e62 !important;
 /*     #00c6ff*/
     border:none !important;
     border-radius: 2px !important;
-     transition: 0.3s !important;
-     margin-top: 10px !important;
+     transition: 0.7s !important;
+     margin-top: 15px !important;
      border-radius: 0px !important;
-     box-shadow: 0 0 3px rgba(255,94,98,0.2) !important;
+	 box-shadow: 0 0 3px rgba(255,94,98,0.2) !important;
      outline: none !important;
 }
 .btn-success:hover{
     background:#ff5e62 !important;
 /*    #0072ff*/
 	color: ghostwhite !important;
-	box-shadow: 0 0 10px rgba(255,94,98,0.7) !important;
+	box-shadow:0px 5px 5px 0px rgba(255,94,98,0.5) !important;
+    transform: translatey(-5px);
 }
 .btn-warning{
 	font-family: Oswald;
-	 background-color:#00c6ff !important;
+	 background-color:#5271ff !important;
 /*     #00c6ff*/
     border:none !important;
     border-radius: 2px !important;
-     transition: 0.3s !important;
+     transition: 0.7s !important;
      margin-top: 10px !important;
      border-radius: 0px !important;
-     box-shadow: 0 0 3px rgba(0,198,255,0.2) !important;
+	 box-shadow: 0 0 3px rgba(82,113,255,0.2) !important;
      outline: none !important;
      color: ghostwhite !important;
 }
 .btn-warning:hover{
-    background:#00c6ff !important;
+    background:#5271ff !important;
 /*    #0072ff*/
-	box-shadow: 0 0 10px rgba(0,198,255,0.7) !important;
+	box-shadow: 0px 5px 5px 0px rgba(82,113,255,0.5) !important;
+    transform: translatey(-5px);
 }
 .btn-danger{
 	font-family: Oswald;
@@ -96,17 +64,18 @@ color:#FF5F6D;
 /*     #00c6ff*/
     border:none !important;
     border-radius: 2px !important;
-     transition: 0.3s !important;
-     margin-top: 10px !important;
+     transition: 0.7s !important;
+     margin-top: 15px !important;
      border-radius: 0px !important;
-     box-shadow: 0 0 3px rgba(255,153,0,0.2) !important;
+	 box-shadow: 0 0 3px rgba(255,153,0,0.2) !important;
      outline: none !important;
 }
 .btn-danger:hover{
     background:#ff9900 !important;
 /*    #0072ff*/
 	color: ghostwhite !important;
-	box-shadow: 0 0 10px rgba(255,153,0,0.7) !important;
+	box-shadow: 0px 5px 5px 0px rgba(255,153,0,0.5) !important;
+    transform: translatey(-5px);
 }
 .col-centered{
     float: none;
@@ -124,20 +93,22 @@ h4 a{
     color:#2d2d2d !important;
 }
 h4 a:hover{
-	color: #0072ff !important;
+	color: #5271ff !important;
 	text-decoration: none;
 }
 h1{
 	font-family: oswald;
 }
-h2,h3,h5{
+/*
+h2,h3{
 	font-family: oswald;
 	color: #0072ff;
 	font-weight: bold;
 }
+*/
 ul,p{
 	font-size: 18px;
-	font-family:"literata";
+    font-family: 'PT Serif', serif;
     color: #2d2d2d;
 /*	font-family: literata;*/
 /*	font-weight: 600;*/
@@ -149,16 +120,16 @@ img,a{
 	user-select: none;
 }
 p a{
-	color:#00c6ff;
+	color:#5271ff;
 /*    #FF5F6D #76b852 #8DC26F*/
 	text-decoration: underline !important;
-	transition: 0.6s !important;
+/*	transition: 0.6s !important;*/
 }
 p a:hover{
-color:#0072ff;
+color:#5271ff;
 }
 ::selection{
 	 color: #2d2d2d;
-    background-color:#00c6ff;
+     background-color: deepskyblue;
 }
 
