--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body
 .btn-success:hover{
     background:#ff5e62 !important;
 /*    #0072ff*/
-	color: ghostwhite !important;
+	color: #2d2d2d !important;
 	box-shadow:0px 5px 5px 0px rgba(255,94,98,0.5) !important;
     transform: translatey(-5px);
 }
@@ -73,7 +73,7 @@ body
 .btn-danger:hover{
     background:#ff9900 !important;
 /*    #0072ff*/
-	color: ghostwhite !important;
+	color:#2d2d2d !important;
 	box-shadow: 0px 5px 5px 0px rgba(255,153,0,0.5) !important;
     transform: translatey(-5px);
 }
