--- a/style.css
+++ b/style.css
@@ -1,21 +1,18 @@
 body
 {
  background-color: whitesmoke;
-/*     background:linear-gradient(to right, rgb(5, 250, 225), rgb(29, 53, 226));*/
 }
 #box{
    border: 0px solid white;
    border-radius: 0px;
    margin-bottom: 20px !important;
    padding: 10px;
-/*   background-color: rgb(240,240,240);*/
 }
 #box2{
    border: 0px solid white;
    border-radius: 0px;
    margin-bottom: 20px !important;
    box-shadow: 0 0 3px rgba(0,0,0,0.2);
-/*   background-color: rgb(240,240,240);*/
 }
 .navbar-expand-md{
    box-shadow: 0 0 7px rgba(0,0,0,0.1);	
@@ -40,7 +37,6 @@ body
 .btn-warning{
 	font-family: Oswald;
 	 background-color:#5271ff !important;
-/*     #00c6ff*/
     border:none !important;
     border-radius: 2px !important;
      transition: 0.3s !important;
@@ -52,14 +48,12 @@ body
 }
 .btn-warning:hover{
     background:#5271ff !important;
-/*    #0072ff*/
-	box-shadow: 0px 5px 5px 0px rgba(82,113,255,0.5) !important;
+    box-shadow: 0px 5px 5px 0px rgba(82,113,255,0.5) !important;
     transform: translatey(-5px);
 }
 .btn-danger{
-	font-family: Oswald;
-	 background-color:#ff9900 !important;
-/*     #00c6ff*/
+    font-family: Oswald;
+    background-color:#ff9900 !important;
     border:none !important;
     border-radius: 2px !important;
      transition: 0.3s !important;
@@ -95,19 +89,10 @@ h4 a:hover{
 h1{
 	font-family: oswald;
 }
-/*
-h2,h3{
-	font-family: oswald;
-	color: #0072ff;
-	font-weight: bold;
-}
-*/
 ul,p{
-	font-size: 18px;
-    font-family: 'PT Serif', serif;
+    font-size: 18px;
+    font-family: 'Raleway', sans-serif;
     color: #2d2d2d;
-/*	font-family: literata;*/
-/*	font-weight: 600;*/
 }
 html{
 scroll-behavior: smooth;
@@ -117,15 +102,13 @@ img,a{
 }
 p a{
 	color:#5271ff;
-/*    #FF5F6D #76b852 #8DC26F*/
 	text-decoration: underline !important;
-/*	transition: 0.6s !important;*/
 }
 p a:hover{
 color:#5271ff;
 }
 ::selection{
-	 color: #2d2d2d;
+     color: #2d2d2d;
      background-color: deepskyblue;
 }
 
