--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ p a{
   .swiper-container {
       width: 100%;
       height: 100%;
+      outline:none !important;
     }
     .swiper-slide {
       text-align: center;
