--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,12 +1,19 @@
 *{
 font-family: 'Permanent Marker', sans-serif;
 }
-html {
+/* html {
   background: url(../../Image/BG.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+} */
+body{
+        background: url('../../Image/BG.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 h1{
     background-color: #2980b9;
@@ -64,8 +71,10 @@ li:hover span{
 
 #container
 {
-    width: 300px;
-    margin:80px auto;
+    padding: 0;
+    float: none;
+    /*width: 300px;*/
+    margin: 80px auto;
     background-color: #f7f7f7;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
 }
