--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,24 +1,15 @@
 *{
-font-family: 'Fredoka One', sans-serif;
+    font-family: 'Fredoka One';
 }
-/* html {
-  background: url(../../Image/BG.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} */
 body{
-        background: url('../../Image/BG.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+background: #00d2ff;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 h1{
     background-color: #2980b9;
     color: whitesmoke;
-    margin: 0 !important;
+    margin: 0;
     padding: 10px 20px;
     text-transform: uppercase;
     font-size: 25px;
@@ -27,8 +18,8 @@ h1{
 }
 ul{
     list-style: none;
-    margin: 0 !important;
-    padding: 0 !important;
+    margin: 0;
+    padding: 0;
 }
 li{
     background-color: #fff;
@@ -40,7 +31,6 @@ li:nth-of-type(2n){
     background-color: #f7f7f7;
 }
 input{
-    margin: 0;
     font-size: 20px;
     background-color: #f7f7f7;
     padding: 13px 13px 13px 20px;
@@ -69,13 +59,11 @@ li:hover span{
     width: 40px;
     opacity: 1.0;
 }
-.col-centered{
-    margin: 80px auto;
-    float: none;
-}
+
 #container
 {
-    padding: 0;
+    width: 300px;
+    margin:80px auto;
     background-color: #f7f7f7;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
 }
@@ -88,3 +76,19 @@ li:hover span{
     float: right;
     padding-top: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
