--- a/liquid-layout/liquid.css
+++ b/liquid-layout/liquid.css
@@ -1,21 +1,90 @@
+* {
+    box-sizing: border-box;
+}
 body {
-width: 90%;
-margin: 0 auto;}
-#content {overflow: auto;}
-#nav, #feature, #footer {
-margin: 1%;}
-.column1, .column2, .column3 {
-width: 31.3%;
-float: left;
-margin: 1%;}
-.column3 {margin-right: 0%;}
-li {
-display: inline;
-padding: 0.5em;}
-#nav, #footer {
-background-color: #efefef;
-padding: 0.5em 0;}
-#feature, .article {
-height: 10em;
-margin-bottom: 1em;
-background-color: #efefef;}
+    margin: 1em;
+    font: 1.2em/1.3em 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', 'Roboto-Light', 'Roboto Light', 'Roboto', 'Segoe UI Web Light', 'Segoe UI Light', 'Segoe UI Web Regular', 'Segoe UI', Helvetica, Arial, sans-serif;
+  color: #fff;
+}
+h1 {
+    font-weight: normal;
+    text-align: center;
+}
+p {
+    margin: 0 0 1em 0;
+}
+
+#main {
+   margin: 0;
+   padding: 0;
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-flow: row;
+   flex-flow: row;
+}
+
+header,
+footer,
+#main > article,
+#main > nav,
+#main > aside {
+   margin: 4px;
+   padding: 1em;
+}
+
+#main > article {
+   background: #996;
+   -webkit-flex: 4 1 0;
+           flex: 4 1 0;
+   -webkit-order: 2;
+           order: 2;
+}
+
+#main > nav,
+#main > aside {
+   background: #663;
+   -webkit-flex: 1 6 0;
+           flex: 1 6 0;
+}
+#main > nav {
+   -webkit-order: 1;
+           order: 1;
+}
+
+#main > aside {
+   -webkit-order: 3;
+           order: 3;
+}
+
+header, footer {
+   display: block;
+   min-height: 80px;
+}
+
+header {
+   background: #633;
+}
+
+footer {
+  background: #c66;
+}
+
+/* Too narrow to support three columns */
+  @media all and (max-width: 640px) {
+
+   #main, #page {
+    -webkit-flex-flow: column;
+            flex-flow: column;
+}
+
+   #main > article, #main > nav, #main > aside {
+    /* Return them to document order */
+    -webkit-order: 0;
+            order: 0;
+   }
+
+   #main > nav, #main > aside, header, footer {
+    min-height: 50px;
+
+   }
+}
