--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,14 +1,31 @@
+@font-face {
+  font-family: "from-beyond";
+  src: url("../fonts/From Beyond.ttf");
+}
 #nav-link{
-  color: #eee !important;
-    font-family: 'chewy', sans-serif;
+    color: #eee !important;
+    font-family: 'from-beyond', sans-serif;
+    letter-spacing: 2px;
     transition: 0.3s;
+    text-shadow: 0 5px rgba(0,0,0,0.2);
 }
 #nav-link:hover{
  color: #63ffd9 !important;
  text-decoration: underline;
 }
+.navbar-brand{
+  font-family: 'from-beyond', sans-serif;
+  font-size: 2rem;
+  color: #63ffd9 !important;
+
+}
+.navbar-brand span{
+  text-shadow: 0 5px rgba(0,0,0,0.5);
+}
 .navbar-expand-md{
    box-shadow: 0 0 7px rgba(0,0,0,0.3);
+   background-color: #2d2d2d;
+   opacity: 0.8;
 }
 .navbar .nav-item {
     font-size: 1.2rem;
@@ -16,6 +33,8 @@
   }
 .navbar-toggler{
     outline: none !important;
+    border-radius: 0px !important;
+    box-shadow: 0 3px rgba(0,0,0,0.3);
 }
 .page-holder{
   min-height: 100vh;
