--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,14 @@
   font-family: "from-beyond";
   src: url("../fonts/From Beyond.ttf");
 }
+@font-face {
+  font-family: "oswald-medium";
+  src: url("../fonts/Oswald-Medium.ttf");
+}
+@font-face {
+  font-family: "open-sans";
+  src: url("../fonts/OpenSans-Regular.ttf");
+}
 #nav-link{
     color: #eee !important;
     font-family: 'from-beyond', sans-serif;
@@ -17,7 +25,6 @@
   font-family: 'from-beyond', sans-serif;
   font-size: 2rem;
   color: #63ffd9 !important;
-
 }
 .navbar-brand span{
   text-shadow: 0 5px rgba(0,0,0,0.5);
@@ -41,4 +48,29 @@
 }
 .bg-cover{
   background-size: cover !important;
+}
+.btn-outline-secondary{
+  font-family:'Oswald-Medium', sans-serif;
+  border-radius: 0px !important;
+  /* border: 2px solid #2d2d2d; */
+  background-color: #eee;
+  color: #2d2d2d;
+  box-shadow: 0 5px rgba(0,0,0,0.5) !important;
+  outline: none;
+  transition: 0.3s;
+  margin-top: 30px;
+}
+.btn-outline-secondary:hover{
+   color: #2d2d2d !important;
+   background-color: #63ffd9 !important;
+   box-shadow: 0 5px rgba(0,0,0,0.5) !important;
+}
+.btn-outline-secondary:active{
+    transform: translateY(2px);
+    box-shadow: 0 3px rgba(0,0,0,0.5) !important;
+}
+h1{
+margin-top: 150px !important;
+font-family:'Oswald-Medium', sans-serif;
+text-shadow: 0 5px rgba(0,0,0,0.3);
 }
