--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,7 +23,7 @@
 }
 .navbar-brand{
   font-family: 'from-beyond', sans-serif;
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: #63ffd9 !important;
 }
 .navbar-brand span{
@@ -31,7 +31,7 @@
 }
 .navbar-expand-md{
    box-shadow: 0 0 7px rgba(0,0,0,0.3);
-   background-color: #2d2d2d;
+   background-color: #212121;
    opacity: 0.8;
 }
 .navbar .nav-item {
@@ -43,26 +43,19 @@
     border-radius: 0px !important;
     box-shadow: 0 3px rgba(0,0,0,0.3);
 }
-.page-holder{
-  min-height: 100vh;
-}
-.bg-cover{
-  background-size: cover !important;
-}
 .btn-outline-secondary{
   font-family:'Oswald-Medium', sans-serif;
   border-radius: 0px !important;
-  /* border: 2px solid #2d2d2d; */
   border: 0px !important;
   background-color: #eee;
-  color: #2d2d2d;
+  color: #212121;
   box-shadow: 0 5px rgba(0,0,0,0.5) !important;
   outline: none !important;
   transition: 0.3s;
   margin-top: 30px;
 }
 .btn-outline-secondary:hover{
-   color: #2d2d2d !important;
+   color: #212121 !important;
    background-color: #63ffd9 !important;
    box-shadow: 0 5px rgba(0,0,0,0.5) !important;
 }
@@ -70,8 +63,32 @@
     transform: translateY(2px);
     box-shadow: 0 3px rgba(0,0,0,0.5) !important;
 }
+header.masthead {
+  margin-bottom: 50px;
+  background: no-repeat center center;
+  background-color: #868e96;
+  background-attachment: scroll;
+  position: relative;
+  background-size: cover;
+}
+
+header.masthead .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #212529;
+  opacity: 0.5;
+}
+
+header.masthead .page-heading,
+header.masthead .post-heading,
+header.masthead .site-heading {
+  padding: 200px 0 150px;
+  color: white;
+}
 h1{
-margin-top: 150px !important;
 font-family:'Oswald-Medium', sans-serif;
 text-shadow: 0 5px rgba(0,0,0,0.3);
 }
