--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -48,7 +48,7 @@
     box-shadow: 0 3px rgba(0,0,0,0.3);
 }
 .btn-outline-secondary{
-  font-family:'Oswald-Medium', sans-serif;
+  font-family:'from-beyond', sans-serif;
   border-radius: 0px !important;
   border: 0px !important;
   background-color: #eee;
@@ -57,6 +57,7 @@
   outline: none !important;
   transition: 0.3s;
   margin-top: 30px;
+  text-transform: uppercase;
 }
 .btn-outline-secondary:hover{
    color: #212121 !important;
@@ -102,9 +103,11 @@ text-shadow: 0 5px rgba(0,0,0,0.3);
 
 .post-preview .post-title {
   font-size: 30px;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 10px;
-  font-family:'Oswald-Medium', sans-serif;
+  font-family:'from-beyond', sans-serif;
+  text-transform: uppercase;
+  text-decoration: underline;
 }
 
 .post-preview .post-subtitle {
@@ -122,12 +125,16 @@ footer .list-inline {
 }
 
 footer .copyright {
-  font-size: 20px;
+  font-size: 14px;
   margin-bottom: 0;
   text-align: center;
   font-family: 'open-sans-semibold', sans-serif;
   color: #212121 !important;
   margin-top: 20px;
+}
+footer .copyright span{
+  color: #63ffd9;
+  text-decoration: underline;
 }
 .fa-circle{
   color: #212121;
