--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,6 +14,9 @@
   font-family: "open-sans-semibold";
   src: url("../fonts/OpenSans-SemiBold.ttf");
 }
+body{
+  background: url('../img/tile.jpg') top left repeat;
+}
 
 .navbar-toggler-icon {
     background-image: url('../img/chevron-circle-down-solid.svg') !important;
