--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,9 +17,6 @@
 body{
   background: url('../img/tile.jpg') top left repeat;
 }
-.navbar-toggler{
-  padding:0;
-}
 .navbar-toggler-icon {
     background-image: url('../img/chevron-circle-down-solid.svg') !important;
     color: #eee !important;
@@ -57,8 +54,7 @@ body{
     border-radius: 0px !important;
     border: none;
     transition: 0.5s;
-/*    border: 2px solid rgba(0,0,0,1) !important;
-    box-shadow: 0 3px rgba(0,0,0,1);*/
+    padding: 0px;
 }
 .btn-outline-secondary{
   font-family:'from-beyond', sans-serif;
