--- a/QuickBooks/css/style.css
+++ b/QuickBooks/css/style.css
@@ -269,6 +269,8 @@ p{
 }
 #contact .contact-form textarea{
 height: 100px;
+font-family: 'Rubik', sans-serif;
+font-weight: 400;
 overflow: hidden;
 resize: none;
 }
