--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -56,7 +56,9 @@ body{
     transition: 0.5s;
     padding: 0px;
 }
-.btn-outline-secondary{
+
+
+.myButton{
   font-family:'from-beyond', sans-serif;
   border-radius: 0px !important;
   border: 0px !important;
@@ -67,20 +69,26 @@ body{
   transition: 0.3s;
   margin-top: 30px;
   text-transform: uppercase;
+  font-size: 1.3rem;
+  padding: 10px 20px;
+  display: inline-block;
+  text-decoration: none !important;
 }
-.btn-outline-secondary:hover{
+.myButton:hover{
    color: #212121 !important;
    background-color: #63ffd9 !important;
    box-shadow: 0 5px rgba(0,0,0,0.8) !important;
 }
-.btn-outline-secondary:focus{
+.myButton:focus{
   outline: none;
   border: none;
 }
-.btn-outline-secondary:active{
+.myButton:active{
     transform: translateY(2px);
     box-shadow: 0 3px rgba(0,0,0,0.5) !important;
 }
+
+
 header.masthead {
 
   margin-bottom: 50px;
